--- a/BookToMessages.toml
+++ b/BookToMessages.toml
@@ -21,23 +21,11 @@ properties = [
 	# fn bla(Channel, MaxClientChannelInherited) -> (type of asd)
 	#{ from="MaxClientChannelInherited", function="Bla", tolist=["asd"] },
 
-	# 'order', 'name' are implicit
-	{ from="_void_1", to="Order" },
-	{ from="Topic", to="Topic" },
-	{ from="IsDefault", to="IsDefault" },
 	{ from="password", type="str?", function="PasswordFlaggedB2m", tolist=["HasPassword", "Password"] }, # 'password' is a helper
 	{ from="ChannelType", type="ChannelType", function="ChannelTypeFunB2m", tolist=["IsSemiPermanent", "IsPermanent"] },
-	{ from="Codec", to="Codec" },
-	{ from="CodecQuality", to="CodecQuality" },
-	{ from="NeededTalkPower", to="NeededTalkPower" },
-	{ from="IconId", to="IconId" },
 	{ from="MaxClients", type="MaxClients", function="MaxClientsFunB2m", tolist=["MaxClients", "IsMaxClientsUnlimited"] },
 	{ from="MaxFamilyClients", type="MaxClients", function="MaxFamilyClientsFunB2m", tolist=["MaxFamilyClients", "IsMaxFamilyClientsUnlimited", "InheritsMaxFamilyClients"] },
-	{ from="CodecLatencyFactor", to="CodecLatencyFactor" },
-	{ from="IsUnencrypted", to="IsUnencrypted" },
-	{ from="DeleteDelay", to="DeleteDelay" },
-	{ from="PhoneticName", to="PhoneticName" },
-	#{ from="", to="channel_description?" }, ???
+	{ from="Description", to="Description" }, # From optional data
 ]
 
 [[rule]]
@@ -46,9 +34,8 @@ to = "ChannelMove"
 operation = "update"
 ids = [
 	{ from="Id", to="ChannelId" },
-]
-properties = [
-	{ from="Position", type="(ChannelId, ChannelId)", function="setPositionInternal", tolist=["ParentId", "Order"] }, # 'Position' is a helper
+	{ from="Parent", type="ChannelId", function="ChannelIdB2m", tolist=["ParentId"] },
+	{ from="Order", type="ChannelId", function="ChannelIdB2m", tolist=["Order"] },
 ]
 
 [[rule]]
@@ -105,22 +92,10 @@ to = "ClientMove"
 operation = "update"
 ids = [
 	{ from="Id", to="ClientId" },
-	{ function="GetEmptyString", tolist=["ChannelPassword"] },
+	{ from="Channel", type="ChannelId", function="ChannelIdB2m", tolist=["ChannelId"] },
 ]
 properties = [
-	{ from="Channel", to="ChannelId" },
-]
-
-[[rule]]
-from = "Client"
-to = "ClientMove"
-operation = "update"
-ids = [
-	{ from="Id", to="ClientId" },
 	{ from="Password", type="str", function="PasswordB2m", tolist=["ChannelPassword"] },
-]
-properties = [
-	{ from="ChannelWithPassword", type="ChannelId", function="ChannelIdB2m", tolist=["ChannelId"] },
 ]
 
 [[rule]]
